{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 461,
  "lineage": "d1c09771-a7fe-462a-7ce1-fbd9ebaf39c2",
  "resources": [
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:security-group/sg-0e872ab51be8812b5",
            "description": "Security group for DMS replication instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e872ab51be8812b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "aws-de-project-dev-dms-sg",
            "name_prefix": "",
            "owner_id": "424254664937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-de-project-dev-dms-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-dms-sg",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-396365767",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07691efadba5f63e5",
            "security_group_rule_id": "sgr-080ed415833274047",
            "self": false,
            "source_security_group_id": "sg-0e872ab51be8812b5",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dms.aws_security_group.dms",
            "module.rds.aws_security_group.rds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.glue",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "glue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:security-group/sg-023ff97f61adddb0c",
            "description": "Security group for Glue",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023ff97f61adddb0c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "aws-de-project-dev-glue-sg",
            "name_prefix": "",
            "owner_id": "424254664937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-de-project-dev-glue-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-glue-sg",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.glue",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redshift_ingress_glue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5439,
            "id": "sgrule-4044131265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bbf1a88a1eaf21a6",
            "security_group_rule_id": "sgr-06c3e7534881a0dd7",
            "self": false,
            "source_security_group_id": "sg-023ff97f61adddb0c",
            "timeouts": null,
            "to_port": 5439,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.glue.aws_security_group.glue",
            "module.redshift.aws_security_group.redshift",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lambda",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:security-group/sg-0b03cf15cf2b4c11d",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b03cf15cf2b4c11d",
            "ingress": [],
            "name": "aws-de-project-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "424254664937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-de-project-dev-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-lambda-sg",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:security-group/sg-07691efadba5f63e5",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07691efadba5f63e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "aws-de-project-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "424254664937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-de-project-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-rds-sg",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.redshift",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:security-group/sg-0bbf1a88a1eaf21a6",
            "description": "Security group for Redshift cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbf1a88a1eaf21a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023ff97f61adddb0c"
                ],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "aws-de-project-dev-redshift-sg",
            "name_prefix": "",
            "owner_id": "424254664937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-de-project-dev-redshift-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-redshift-sg",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:internet-gateway/igw-00f4cd138883f41d2",
            "id": "igw-00f4cd138883f41d2",
            "owner_id": "424254664937",
            "tags": {
              "Name": "aws-de-project-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-igw",
              "Project": "aws-de-project"
            },
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:route-table/rtb-0458f99a2eb54e281",
            "id": "rtb-0458f99a2eb54e281",
            "owner_id": "424254664937",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-de-project-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-private-rt",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:route-table/rtb-0a62616062b0ab659",
            "id": "rtb-0a62616062b0ab659",
            "owner_id": "424254664937",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f4cd138883f41d2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-de-project-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-public-rt",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bedfb5e149c93dd",
            "route_table_id": "rtb-0458f99a2eb54e281",
            "subnet_id": "subnet-008fefa13c815ae5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07272feec6bda4027",
            "route_table_id": "rtb-0458f99a2eb54e281",
            "subnet_id": "subnet-0e37bdbd32df1de07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008968375160831f5",
            "route_table_id": "rtb-0a62616062b0ab659",
            "subnet_id": "subnet-019b84746757be3c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eed6a4df3e9b4378",
            "route_table_id": "rtb-0a62616062b0ab659",
            "subnet_id": "subnet-023f0e27922d50eb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:security-group/sg-0793725b51a4a021c",
            "description": "Default security group to allow internal communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0793725b51a4a021c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "aws-de-project-dev-default-sg",
            "name_prefix": "",
            "owner_id": "424254664937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-de-project-dev-default-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-default-sg",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:security-group/sg-0d775c73fdaa9f533",
            "description": "Security Group for VPC Endpoints",
            "egress": [],
            "id": "sg-0d775c73fdaa9f533",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aws-de-project-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "424254664937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-de-project-dev-vpce-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-vpce-sg",
              "Project": "aws-de-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:subnet/subnet-008fefa13c815ae5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008fefa13c815ae5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424254664937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-de-project-dev-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-private-1",
              "Project": "aws-de-project"
            },
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:subnet/subnet-0e37bdbd32df1de07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e37bdbd32df1de07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424254664937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-de-project-dev-private-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-private-2",
              "Project": "aws-de-project"
            },
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:subnet/subnet-019b84746757be3c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019b84746757be3c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "424254664937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-de-project-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-public-1",
              "Project": "aws-de-project"
            },
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:subnet/subnet-023f0e27922d50eb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023f0e27922d50eb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "424254664937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-de-project-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-public-2",
              "Project": "aws-de-project"
            },
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:vpc/vpc-0a19c75431062fbb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a905111043870cc",
            "default_route_table_id": "rtb-06ca7458a6e64fb03",
            "default_security_group_id": "sg-0b150f209a137d267",
            "dhcp_options_id": "dopt-08f5323781be2fef9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a19c75431062fbb5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ca7458a6e64fb03",
            "owner_id": "424254664937",
            "tags": {
              "Name": "aws-de-project-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "aws-de-project-dev-vpc",
              "Project": "aws-de-project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:vpc-endpoint/vpce-0f2ec9a5fd019f89f",
            "cidr_blocks": [
              "16.12.4.0/23",
              "3.5.252.0/22",
              "52.95.190.0/24",
              "52.95.146.0/23",
              "52.95.145.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f2ec9a5fd019f89f",
            "ip_address_type": "ipv4",
            "owner_id": "424254664937",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7da54014",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0458f99a2eb54e281",
              "rtb-0a62616062b0ab659"
            ],
            "service_name": "com.amazonaws.ca-central-1.s3",
            "service_region": "ca-central-1",
            "state": "available",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "aws-de-project"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:vpc-endpoint/vpce-04ee2d7e9d79bca69",
            "dns_entry": [
              {
                "dns_name": "vpce-04ee2d7e9d79bca69-m5e1x5tn.secretsmanager.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-04ee2d7e9d79bca69-m5e1x5tn-ca-central-1a.secretsmanager.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-04ee2d7e9d79bca69-m5e1x5tn-ca-central-1b.secretsmanager.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "secretsmanager.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z0308704AID7N4W5RPE5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04ee2d7e9d79bca69",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0131b5d569e2a826d",
              "eni-0db2db7da2a93208e"
            ],
            "owner_id": "424254664937",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d775c73fdaa9f533"
            ],
            "service_name": "com.amazonaws.ca-central-1.secretsmanager",
            "service_region": "ca-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.136",
                "subnet_id": "subnet-008fefa13c815ae5f"
              },
              {
                "ipv4": "10.0.11.166",
                "subnet_id": "subnet-0e37bdbd32df1de07"
              }
            ],
            "subnet_ids": [
              "subnet-008fefa13c815ae5f",
              "subnet-0e37bdbd32df1de07"
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "aws-de-project"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:424254664937:vpc-endpoint/vpce-0c3661c4e0d260160",
            "dns_entry": [
              {
                "dns_name": "vpce-0c3661c4e0d260160-tsdhva6q.sts.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-0c3661c4e0d260160-tsdhva6q-ca-central-1b.sts.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-0c3661c4e0d260160-tsdhva6q-ca-central-1a.sts.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "sts.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z030871916ESZULAX63FI"
              },
              {
                "dns_name": "sts.ca-central-1.api.aws",
                "hosted_zone_id": "Z02027863I63SJRR5YOX0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c3661c4e0d260160",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00db72c84978d37d1",
              "eni-072a98c3f2f325cfb"
            ],
            "owner_id": "424254664937",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d775c73fdaa9f533"
            ],
            "service_name": "com.amazonaws.ca-central-1.sts",
            "service_region": "ca-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.64",
                "subnet_id": "subnet-008fefa13c815ae5f"
              },
              {
                "ipv4": "10.0.11.203",
                "subnet_id": "subnet-0e37bdbd32df1de07"
              }
            ],
            "subnet_ids": [
              "subnet-008fefa13c815ae5f",
              "subnet-0e37bdbd32df1de07"
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "aws-de-project"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a19c75431062fbb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}